fork inital commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,9 +59,9 @@ TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${OPENGL_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${OPENGL_LIBRARIES})
 
 LIST(APPEND CMAKE_MODULE_PATH "/dependencies/g2o/cmake_modules")
-FIND_PACKAGE(G2O REQUIRED)
+FIND_PACKAGE(g2o REQUIRED)
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${G2O_INCLUDE_DIR})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY} g2o_solver_eigen g2o_types_sba g2o_types_slam3d)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE g2o::core g2o::stuff g2o::types_icp g2o::types_sba)
 
 FIND_PACKAGE(Eigen3 3.3 REQUIRED NO_MODULE)
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${EIGEN3_INCLUDE_DIR})
