--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,35 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C++: main",
+            "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/slam",
-            "args": [
-                "videos/freiburgxyz_525.mp4",
-                "525",
-                //"videos/kitti_984.mp4",
-                //"984",
-            ],
+            // Resolved by CMake Tools:
+            "program": "${command:cmake.launchTargetPath}",
+            "args": ["/home/k-hshmt/cpp_dev/slam/slam/videos/kitti_984.mp4", "984"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
+            "environment": [
+                {
+                    // add the directory where our target was built to the PATHs
+                    // it gets resolved by CMake Tools:
+                    "name": "PATH",
+                    "value": "${env:PATH}:${command:cmake.getLaunchTargetDirectory}"
+                },
+                {
+                    "name": "OTHER_VALUE",
+                    "value": "Something something"
+                }
+            ],
+            "console": "externalTerminal",
             "MIMode": "gdb",
-            "preLaunchTask": "CMake: build"
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
